# skill-manager

./: .gitignore  CONTEXT.md  Cargo.toml  README.md  rust-toolchain.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: json-contracts.md  list-json.md  skills-toml.md  synchronization-state.md
docs/adr/: 0001-use-git-command.md
scripts/: package-release.py  release-smoke-test.py
src/: lib.rs  main.rs
tests/: cli.rs  cli_sync.rs  discovery.rs  interactive_selection.rs  management.rs  selection.rs  synchronization.rs
tests/common/: mod.rs
xtask/src/: main.rs
